# ai-agent-latex-book-assignment3

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.toml
docs/: AI_WORKFLOW.md  COSTS.md  DECISIONS.md  PLAN.md  PRD.md  PROMPTS.md  QUALITY.md  SUBMISSION_CHECKLIST.md  TODO.md
latex_project/: README.md  main.tex  preamble.tex  references.bib
latex_project/chapters/: 00_abstract.tex  01_introduction.tex  02_background.tex  03_architecture.tex  04_implementation.tex  05_poc_to_production.tex  06_results.tex  07_discussion.tex  08_conclusion.tex
latex_project/content/: README.md  book.md
latex_project/scripts/: generate_architecture.py  generate_graph.py
results/final_pdf/: validation_report.md
results/stage8b1-minimal-gemini-20260611-154559/: runtime.json
results/stage8b1-minimal-gemini-20260611-154559/validation_reports/: run_note.md
results/stage8c3-full-gemini-20260611-164153/: runtime.json
results/stage8c3-full-gemini-20260611-164153/crew_outputs/: _index.json  draft.txt  outline.txt  references.txt  review.txt
results/stage8c7-full-gemini-20260611-173125/: runtime.json
src/agentic_latex_book/: __init__.py  cli.py  cli_commands.py  config.py  content_qa.py  evidence.py  logging_setup.py  paths.py  runtime.py
src/agentic_latex_book/crew/: __init__.py  agents.py  llm.py  (+10 more)
tests/: test_config.py  test_content_hardening.py  test_content_qa.py  test_crew_builder.py  test_crew_llm.py  test_crew_specs.py  test_evidence.py  test_full_runner.py  test_logging_setup.py  test_paths.py  test_runner.py  test_runtime.py  test_smoke.py
(+6 files in other folders)
