[project]
name = "agentic-latex-book"
version = "0.1.0"
description = "A CrewAI multi-agent pipeline that generates a ~15-page article/book as a polished LaTeX PDF."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Awad" },
    { name = "Rawey Sleiman" },
]
keywords = ["crewai", "latex", "multi-agent", "pdf"]

# Runtime dependencies. CrewAI is the required orchestration framework (decision D-003).
# It is declared here so the environment is ready; no agents/tasks are implemented yet.
dependencies = [
    "crewai>=0.80",
]

[project.scripts]
agentic-latex-book = "agentic_latex_book.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_latex_book"]

# Development tooling (PEP 735 dependency group). Installed by `uv sync` by default.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# A small, sensible starting rule set; tightened during Stage 13 quality hardening.
select = ["E", "F", "I", "W", "UP", "B"]
